--- a/.github/workflows/ej1-workflow.yml
+++ b/.github/workflows/ej1-workflow.yml
@@ -23,3 +23,6 @@ jobs:
                 
           - name: Construir imagen
             uses: cloudposse/github-action-docker-compose-test-run@main
+            with:
+                file: ./docker-compose.yml
+                service: app
